<resources>
    <string name="app_name">途途导由</string>
    <!-- login -->
    <string name="phone_login">手机登录</string>
    <string name="register">注册</string>
    <string name="phone">手机号</string>
    <string name="et_phone">+86</string>
    <string name="password">密码</string>
    <string name="login_password">请输入密码</string>
    <string name="register_password">请输入带大写字母的8-20位密码</string>
    <string name="forgetpass">忘记密码？</string>
    <string name="forgetpw">忘记密码</string>
    <string name="login">登录</string>

    <!-- register -->
    <string name="fill_info">信息填写</string>
    <string name="next">下一步</string>
    <string name="register_guide">导游注册</string>
    <string name="register_native">向导注册</string>
    <string name="register_accompany">随游注册</string>
    <string name="female">女士</string>
    <string name="male">先生</string>
    <string name="name">姓名</string>
    <string name="et_name">请输入真实姓名</string>
    <string name="card">身份证</string>
    <string name="et_card">请输入身份证号码</string>
    <string name="card_type">证件类型</string>
    <string name="et_card_type">请选择导游证类型</string>
    <string name="tourist_no">导游证号码</string>
    <string name="et_tourist">请输入导游证号码</string>
    <string name="post_info">资料上传</string>
    <string name="finish">完成</string>
    <string name="card_front">身份证正面</string>
    <string name="follow_img">请按照示例上传</string>
    <string name="card_other">身份证反面</string>
    <string name="tourist">导游证</string>
    <string name="personal">本人手持身份证</string>
    <string name="uploade">上传</string>
    <string name="camera">拍照</string>
    <string name="photo">相册</string>
    <string name="cancel">取消</string>
    <string name="guide">导游</string>
    <string name="leader">领队</string>
    <string name="verification">验证码</string>
    <string name="et_verification">请填写六位验证码</string>
    <string name="newpass">新密码</string>
    <string name="et_newpass">请输入新密码</string>
    <string name="get_verification">获取验证码</string>
    <string name="reset_verification">重新获取</string>
    <string name="confirm_pw">确认密码</string>
    <string name="et_confirm_pw">请再次输入密码</string>
    <string name="invite_code">邀请码</string>
    <string name="et_invite_code">请输入邀请码</string>
    <string name="register_explain">注册即代表</string>
    <string name="register_zack"><u>阅读并同意Zack协议</u></string>
    <string name="register_ok_notification">我们会在一个工作日内完成审核\n\t审核结果将在第一时间通知您</string>
    <string name="guide_type1">导游</string>
    <string name="need_data">需要提供资料：</string>
    <string name="guide_type1_data">本人身份证正面照片、导游证照片、手持省份证照片</string>
    <string name="guide_type2">向导</string>
    <string name="guide_other_data">本人身份证正面照片、手持省份证照片</string>
    <string name="guide_type3">随游</string>
    <string name="step1">手机验证</string>
    <string name="step2">选择类型</string>
    <string name="step3">填写信息</string>
    <string name="step4">资料上传</string>
    <!-- home -->
    <string name="myorder">我的订单</string>
    <string name="mytravel">我的旅博</string>
    <string name="service_time">服务时间</string>
    <string name="start_order">开始接单</string>
    <string name="stop_order">停止接单</string>
    <string name="setting">设置</string>
    <string name="mywallet">我的钱包</string>
    <string name="information">消息中心</string>
    <!-- order -->
    <string name="finished">已完成</string>
    <string name="going">进行中</string>
    <string name="ordered">已预约</string>
    <string name="closed">已关闭</string>
    <string name="natival">向导</string>
    <string name="accompany">随游</string>
    <string name="order_detail">订单详情</string>
    <string name="order_number">订&#160;&#160;单&#160;&#160;号</string>
    <string name="my_comment">我的评价</string>
    <string name="order_details">订单明细</string>
    <string name="pay_details">支付明细</string>
    <string name="pay_success">成功支付</string>
    <string name="cost">服务费</string>
    <string name="fee">打赏</string>
    <string name="discount">优惠</string>
    <string name="TA_comment">TA的评价</string>

    <string name="refuse">拒单</string>
    <string name="accept">接单</string>
    <string name="cancel_pay">取消费用：</string>
    <string name="update_ok">确认修改</string>
    <string name="confirm_select">确认选择</string>
    <string name="pay_money">支付定金：</string>
    <string name="alipay">支付宝支付</string>
    <string name="weixin">微信支付</string>
    <string name="confirm">确认</string>
    <!-- setting -->
    <string name="monday">一</string>
    <string name="tuesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
    <string name="sunday">日</string>

    <string name="price_per_h">价格/小时</string>
    <string name="price_per_d">价格/天</string>
    <string name="service_location">服务地区</string>
    <string name="guide_type">导游性质</string>
    <string name="total">全陪</string>
    <string name="part">地陪</string>
    <string name="location">所在地</string>
    <string name="et_location">请选择所在城市</string>
    <string name="language">服务语言</string>
    <string name="chinese">中文</string>
    <string name="english">英文</string>
    <string name="all">中英文</string>
    <string name="select_city">选择城市</string>
    <string name="personal_info">个人信息</string>
    <string name="personal_main">主页</string>
    <string name="confirm_update">确认修改</string>
    <string name="confirm_save">保存</string>
    <string name="headpic">头像</string>
    <string name="gender">性别</string>
    <string name="birthday">出生日期</string>
    <!-- server -->
    <string name="start_service">开始服务</string>
    <string name="end_service">结束服务</string>
    <string name="service_time1">服务时间：</string>
    <string name="order_remain">订单提醒</string>
    <string name="remain_content">您有新的订单，请及时查看</string>
    <string name="fast_remain">抢单提醒</string>
    <string name="remain_content1">顾客发出新的订单，目的地为</string>
    <string name="remain_content2">，人数为</string>
    <string name="remain_content3">人，是否抢单？</string>
    <!-- money -->
    <string name="bank_card">银行卡</string>
    <string name="balance">余额</string>
    <string name="my_balance">我的余额</string>
    <string name="recharge">充值</string>
    <string name="deposit">提现</string>
    <string name="paydetail">收支明细</string>
    <string name="balance_more">点击查看更多</string>
    <string name="balance_total">总金额(元)</string>
    <string name="balance_deposit">可提现金额</string>
    <string name="balance_other">结算中的金额</string>
    <string name="deposit_recharge">余额转出</string>
    <string name="bank_card_no">银行卡号</string>
    <string name="get_time">到账时间</string>
    <string name="put_money">转出金额</string>
    <string name="et_put_money">本次可转出：0.00元</string>
    <!-- use guide -->
    <string name="sure">确定</string>
    <string name="setting_user_info">个人资料</string>
    <string name="user_guide">用户指南</string>
    <string name="server_call">客服电话</string>
    <string name="law_list">法律条款</string>
    <string name="about_us">关于途途导由</string>
    <string name="feedback">意见反馈</string>
    <string name="login_out">退出登录</string>
    <string name="about">关于</string>
    <string name="basic_intro">基本介绍</string>
    <string name="now_version">当前版本</string>
    <string name="call_us">联系我们</string>
    <string name="et_feedback">感谢您的宝贵意见</string>
    <string name="submit">提交</string>
    <string name="about_guide">关于导游</string>
    <string name="about_native">关于向导</string>
    <string name="about_accompany">关于随游</string>
    <string name="now_and_order">即时和预约</string>
    <string name="cancel_order">取消订单</string>
    <string name="btn_back">返回</string>

    <string name="service_duration">服务时长</string>
    <string name="day">天</string>
    <string name="service_price">价格</string>
    <string name="price_day">/天</string>
    <string name="service_num">服务次数</string>
    <string name="count">次</string>
    <string name="zero">0</string>
    <string name="zero_price">0.00</string>
    <string name="self_tag">您的印象:</string>
    <string name="self_service">服务标准:</string>
    <string name="self_introduce">自我介绍:</string>
    <string name="self_title">个人主页</string>
    <string name="waitting">请稍候...</string>

    <!-- pull ListView -->
    <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_nomore">没有更多数据</string>
    <string name="load_fail">加载失败</string>
    <string name="load_succeed">加载成功</string>
    <string name="now_loading">正在加載...</string>

</resources>
