<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <include layout="@layout/titlebar"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/dp8"
        android:background="@color/line_color" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp48"
        android:background="@color/head_text_color">

        <TextView
            android:id="@+id/tv_phone"
            style="@style/TextViewStyle"
            android:text="@string/phone" />


        <EditText
            android:id="@+id/et_phone"
            style="@style/EditTextStyle"
            android:hint="@string/et_phone"
            android:inputType="phone" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/dp16"
        android:layout_marginRight="@dimen/dp16"
        android:background="@color/line_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp48"
        android:background="@color/head_text_color">

        <TextView
            android:id="@+id/tv_verification"
            style="@style/TextViewStyle"
            android:text="@string/verification" />


        <EditText
            android:id="@+id/et_verification"
            style="@style/EditTextStyle"
            android:hint="@string/et_verification"
            android:inputType="number" />

        <Button
            android:id="@+id/btn_verification"
            android:layout_width="93dp"
            android:layout_height="28dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp16"
            android:background="@drawable/bg_roundbtn_verification_style"
            android:gravity="center"
            android:text="@string/get_verification"
            android:textColor="@color/head_text_color"
            android:textSize="@dimen/sp14" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/dp16"
        android:layout_marginRight="@dimen/dp16"
        android:background="@color/line_color" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp48"
        android:background="@color/head_text_color">

        <TextView
            android:id="@+id/tv_code"
            style="@style/TextViewStyle"
            android:text="@string/newpass" />


        <EditText
            android:id="@+id/et_code"
            style="@style/EditTextStyle"
            android:hint="@string/et_newpass"
            android:inputType="textPassword" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color" />

    <Button
        android:id="@+id/btn_login"
        style="@style/ButtonStyle"
        android:layout_marginTop="@dimen/dp16"
        android:text="@string/login" />
</LinearLayout>
