<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <include layout="@layout/titlebar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/line_color" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp48"
        android:background="@color/head_text_color">

        <TextView
            android:id="@+id/tv_phone"
            style="@style/TextViewStyle"
            android:text="@string/phone" />


        <EditText
            android:id="@+id/et_phone"
            style="@style/EditTextStyle"
            android:hint="@string/et_phone"
            android:inputType="phone" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/dp16"
        android:layout_marginRight="@dimen/dp16"
        android:background="@color/line_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp48"
        android:background="@color/head_text_color">

        <TextView
            android:id="@+id/tv_verification"
            style="@style/TextViewStyle"
            android:text="@string/verification" />


        <EditText
            android:id="@+id/et_verification"
            style="@style/EditTextStyle"
            android:hint="@string/et_verification"
            android:inputType="number" />

        <Button
            android:id="@+id/btn_verification"
            android:layout_width="93dp"
            android:layout_height="28dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp16"
            android:background="@drawable/bg_roundbtn_verification_style"
            android:gravity="center"
            android:text="@string/get_verification"
            android:textColor="@color/head_text_color"
            android:textSize="14sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/dp16"
        android:layout_marginRight="@dimen/dp16"
        android:background="@color/line_color" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp48"
        android:background="@color/head_text_color">

        <TextView
            android:id="@+id/tv_pw"
            style="@style/TextViewStyle"
            android:text="@string/password" />


        <EditText
            android:id="@+id/et_pw"
            style="@style/EditTextStyle"
            android:hint="@string/et_password"
            android:inputType="textPassword" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/dp16"
        android:layout_marginRight="@dimen/dp16"
        android:background="@color/line_color" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp48"
        android:background="@color/head_text_color">

        <TextView
            android:id="@+id/tv_confirm_pw"
            style="@style/TextViewStyle"
            android:text="@string/confirm_pw" />


        <EditText
            android:id="@+id/et_confirm_pw"
            style="@style/EditTextStyle"
            android:hint="@string/et_confirm_pw"
            android:inputType="textPassword" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/dp8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_explain"
            android:textColor="@color/text_color"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tv_register_zack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/dp16"
            android:text="@string/register_zack"
            android:textColor="@color/bg_verification_color"
            android:textSize="10sp" />

    </LinearLayout>
</LinearLayout>
