<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rlyt_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp48"
        android:background="@color/head_bg_color">


        <TextView
            android:id="@+id/tv_header"
            style="@style/HeaderTextView"
            android:text="@string/phone_login" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:paddingRight="@dimen/dp16"
            android:text="@string/register"
            android:textColor="@color/head_text_color"
            android:textSize="@dimen/sp14" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:layout_marginTop="@dimen/dp16"
        android:background="@color/head_text_color"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_color" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp48">

            <TextView
                android:id="@+id/tv_phone"
                style="@style/TextViewStyle"
                android:text="@string/phone" />


            <EditText
                android:id="@+id/et_phone"
                style="@style/EditTextStyle"
                android:inputType="phone"
                android:hint="@string/et_phone" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:background="@color/line_color" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp48">

            <TextView
                android:id="@+id/tv_code"
                style="@style/TextViewStyle"
                android:text="@string/password" />


            <EditText
                android:id="@+id/et_code"
                style="@style/EditTextStyle"
                android:inputType="textPassword"
                android:hint="@string/et_password" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_color" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_forgetpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:paddingBottom="@dimen/dp16"
        android:paddingRight="@dimen/dp16"
        android:paddingTop="12dp"
        android:text="@string/forgetpass"
        android:textColor="@color/forgetpass_color"
        android:textSize="@dimen/sp10" />


    <Button
        android:id="@+id/btn_login"
        style="@style/ButtonStyle"
        android:text="@string/login" />
</LinearLayout>
