<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:CircleImageView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/line_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/head_text_color">

        <com.xbx.tourguide.view.CircleImageView
            android:id="@+id/civ_headimg"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:background="@color/head_text_color"
            android:src="@drawable/img_headpic"
            CircleImageView:border_color="@color/head_with_color"
            CircleImageView:border_width="2dp" />


        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/civ_headimg"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <RadioButton
                android:id="@+id/rb_famale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:button="@null"
                android:drawableLeft="@drawable/ic_gender_selected"
                android:drawablePadding="8dp"
                android:text="@string/female"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:background="@null"
                android:button="@null"
                android:checked="false"
                android:drawableLeft="@drawable/ic_gender_normal"
                android:drawablePadding="8dp"
                android:text="@string/male"
                android:textColor="@color/text_color"
                android:textSize="14sp" />
        </RadioGroup>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/head_text_color"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <TextView
                android:id="@+id/tv_name"
                style="@style/TextViewStyle"
                android:text="@string/name" />

            <EditText
                android:id="@+id/et_name"
                style="@style/EditTextStyle"
                android:hint="@string/et_name" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/line_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <TextView
                android:id="@+id/tv_card"
                style="@style/TextViewStyle"
                android:text="@string/card" />

            <EditText
                android:id="@+id/et_card"
                style="@style/EditTextStyle"
                android:hint="@string/et_card" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/line_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <TextView
                android:id="@+id/tv_location"
                style="@style/TextViewStyle"
                android:text="@string/location" />

            <EditText
                android:id="@+id/et_location"
                style="@style/EditTextStyle"
                android:hint="@string/et_location" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/line_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <TextView
                android:id="@+id/tv_language"
                style="@style/TextViewStyle"
                android:text="@string/language" />

            <!--<EditText-->
            <!--android:id="@+id/et_language"-->
            <!--style="@style/EditTextStyle"-->
            <!--android:hint="@string/et_location" />-->

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="90dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_chinese"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:button="@null"
                    android:drawableLeft="@drawable/ic_gender_selected"
                    android:drawablePadding="8dp"
                    android:text="@string/chinese"
                    android:textColor="@color/text_color"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/rb_english"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:background="@null"
                    android:button="@null"
                    android:checked="false"
                    android:drawableLeft="@drawable/ic_gender_normal"
                    android:drawablePadding="8dp"
                    android:text="@string/english"
                    android:textColor="@color/text_color"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/rb_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:background="@null"
                    android:button="@null"
                    android:checked="false"
                    android:drawableLeft="@drawable/ic_gender_normal"
                    android:drawablePadding="8dp"
                    android:text="@string/all"
                    android:textColor="@color/text_color"
                    android:textSize="15sp" />
            </RadioGroup>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_color" />


    </LinearLayout>

</LinearLayout>
